[pinghe]#264 add unit test for createlineitem and fix code smell